create-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev-01
  labels:
    app: webserver
    tier: front-end
    type: web
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: webserver
        tier: front-end
        type: web
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
  replicas: 5
  selector:
    matchLabels:
      tier: front-end
      type: web
