create-pod-inject-secrets-as-env.yaml
#In this definition file we will be injecting secrets as environment variables to the pod containers.
#Using a volume with a secret file will be demoed later.
apiVersion: v1
kind: Pod
metadata:
  name: simple-config-map-demo-with-secrets
  labels:
    name: simple-config-map-demo-with-secrets
    type: front-end-with-secrets
spec:
  containers:
    - name: front-end-config-map-with-secrets
      image: nginx:latest
      ports:
        - containerPort: 8080
      #read key-value pairs as environment variables.
