create-pod-liveliness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-liveliness
  labels:
    name: busybox-liveliness
    type: liveliness-probes
    tier: experiment
spec:
  containers:
    - name: busybox
      image: busybox
      args:
        - /bin/sh
        - -c
        - touch /tmp/healthy; sleep 30, rm -rf /tmp/healthy; sleep 600
      livenessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
          initialDelaySecond: 5
          periodSeconds: 5
