create-pod-with-env-to-container-key-value.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ngnix-pod-with-env
  labels:
    type: web
    tier: experience
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      containerPorts:
      ports:
        - containerPort: 8080
