create-pod-with-security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: front-end
    type: webserver
#In this example we are adding security context at the container level. This can also be added at the pod level and that means it will be applied to all
#the containers in the pod. After limiting the priviliges you can add specific ones via capabilities, note that capabiities are only supported at container
#level and not defined at the pod level.
specs:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        runAsUser: 1000
        capablities:
          add: ["SYS_TIME", "MAC_ADMIN"]
